exports[`ArrowButton view renders "left" and "right" variants correctly 1`] = `
<div>
  <button
    className="left"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
  <button
    className="right"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "background": "linear-gradient(270deg,  50%, rgba(255, 255, 255, 0))",
      }
    }>
    <svg
      className="icon"
      height="17px"
      version="1.1"
      viewBox="0 860 420 500"
      width="10px"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
        id="arrowLeft"
        transform="scale(1, -1) translate(0, -1500)" />
    </svg>
  </button>
</div>
`;

exports[`ArrowButton view renders correctly when disabled 1`] = `
<button
  className="left"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "background": "linear-gradient(90deg,  50%, rgba(255, 255, 255, 0))",
    }
  }>
  <svg
    className="icon"
    height="17px"
    version="1.1"
    viewBox="0 860 420 500"
    width="10px"
    xmlns="http://www.w3.org/2000/svg">
    <path
      d="M358.286 640q0-7.429-5.714-13.143l-224.571-224.571 224.571-224.571q5.714-5.714 5.714-13.143t-5.714-13.143l-28.571-28.571q-5.714-5.714-13.143-5.714t-13.143 5.714l-266.286 266.286q-5.714 5.714-5.714 13.143t5.714 13.143l266.286 266.286q5.714 5.714 13.143 5.714t13.143-5.714l28.571-28.571q5.714-5.714 5.714-13.143z"
      id="arrowLeft"
      transform="scale(1, -1) translate(0, -1500)" />
  </svg>
</button>
`;
